--- a/index.html
+++ b/index.html
@@ -367,6 +367,113 @@
           </p>
         </div>
       </section>
+      <!-- our Services  -->
+      <section class="container mx-auto space-y-6 my-24">
+        <div class="space-y-6">
+          <div class="flex justify-center">
+            <div class="bg-white inline px-4 py-3 rounded-3xl space-x-1">
+              <i class="fa-solid fa-arrow-right"></i>
+              <h4 class="inline text-base font-bold">What we provide</h4>
+            </div>
+          </div>
+          <h2 class="text-2xl md:text-4xl font-bold text-black text-center">
+            Our Services
+          </h2>
+          <p
+            class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
+          >
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+        <div class="grid md:grid-cols-3 gap-4">
+          <!-- service 01  -->
+          <div class="card image-full order-1">
+            <figure>
+              <img src="./assets/service1.jpeg" alt="Shoes" />
+            </figure>
+            <div class="card-body absolute">
+              <div
+                class="card-actions justify-center items-center inset-y-1/2 relative"
+              >
+                <button
+                  class="btn hover:bg-primary_color bg-[#abef5f80] border-0 uppercase font-bold text-base"
+                >
+                  Office Interiors
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- service 02  -->
+          <div class="card image-full row-span-2 -order-2 md:order-2">
+            <figure>
+              <img src="./assets/service2.jpeg" alt="Shoes" />
+            </figure>
+            <div class="card-body absolute">
+              <p
+                class="text-lg font-bold text-gray-400 relative top-1/6 md:top-1/3 text-center"
+              >
+                We bring a high degree of design, technical and manufacturing
+                expertise to all office design projects and can create a
+                workspace interior that reflects your company’s culture,
+                history, and brand – always with the aim of exceeding
+                expectations.
+              </p>
+            </div>
+          </div>
+          <!-- service 03 -->
+          <div class="card image-full order-3">
+            <figure>
+              <img src="./assets/service3.jpeg" alt="Shoes" />
+            </figure>
+            <div class="card-body absolute">
+              <div
+                class="card-actions justify-center items-center inset-y-1/2 relative"
+              >
+                <button
+                  class="btn hover:bg-primary_color bg-[#abef5f80] border-0 uppercase font-bold text-base"
+                >
+                  Office furniture
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- service 04  -->
+          <div class="card image-full order-4">
+            <figure>
+              <img src="./assets/service4.jpg" alt="Shoes" />
+            </figure>
+            <div class="card-body absolute">
+              <div
+                class="card-actions justify-center items-center inset-y-1/2 relative"
+              >
+                <button
+                  class="btn hover:bg-primary_color bg-[#abef5f80] border-0 uppercase font-bold text-base"
+                >
+                  Office Fit Out
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- service 05  -->
+          <div class="card image-full order-5">
+            <figure>
+              <img src="./assets/servoce5.jpg" alt="Shoes" />
+            </figure>
+            <div class="card-body absolute">
+              <div
+                class="card-actions justify-center items-center inset-y-1/2 relative"
+              >
+                <button
+                  class="btn hover:bg-primary_color bg-[#abef5f80] border-0 uppercase font-bold text-base"
+                >
+                  Office Rerurbishment
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- work section  -->
       <section class="container mx-auto my-24 space-y-6">
         <div class="flex justify-center">
@@ -451,80 +558,86 @@
           </p>
           <!-- Portfolio layout  -->
           <div class="grid grid-cols-1 md:grid-cols-12 container mx-auto gap-6">
-          <!-- card 01  -->
-          <div class="flex flex-col md:flex-row items-center border-2 col-span-12 md:col-span-8 rounded-2xl">
-            <figure class="p-4">
-              <img
-                class="border-2 border-dashed w-full"
-                src="./assets/img1.png"
-                alt=""
-              />
-            </figure>
-            <div class="card-body md:w-2/3">
-              <h2 class="text-2xl font-extrabold">Commercial</h2>
-              <p class="text-base">
-                The barn house captivates with its blend of rustic charm and
-                modern. The barn house captivates with its blend of rustic charm
-                and modern .
-              </p>
-              <div class="space-x-1">
-                <h5 class="inline text-2xl text-black font-bold">
-                  View Details
-                </h5>
-                <i
-                  class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
-                ></i>
+            <!-- card 01  -->
+            <div
+              class="flex flex-col md:flex-row items-center border-2 col-span-12 md:col-span-8 rounded-2xl"
+            >
+              <figure class="p-4">
+                <img
+                  class="border-2 border-dashed w-full"
+                  src="./assets/img1.png"
+                  alt=""
+                />
+              </figure>
+              <div class="card-body md:w-2/3">
+                <h2 class="text-2xl font-extrabold">Commercial</h2>
+                <p class="text-base">
+                  The barn house captivates with its blend of rustic charm and
+                  modern. The barn house captivates with its blend of rustic
+                  charm and modern .
+                </p>
+                <div class="space-x-1">
+                  <h5 class="inline text-2xl text-black font-bold">
+                    View Details
+                  </h5>
+                  <i
+                    class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
+                  ></i>
+                </div>
               </div>
             </div>
-          </div>
-          <!-- card 02  -->
-          <div class="col-span-12 md:col-span-4 p-6 border-2 rounded-2xl">
-            <figure class="border-2 border-dashed">
-              <img class="w-full" src="./assets/img2.png" alt="" />
-            </figure>
-          </div>
-          <!-- card 03  -->
-          <div class="col-span-12 md:col-span-3 p-6 border-2 rounded-2xl">
-            <figure class="border-2 border-dashed">
-              <img class="w-full" src="./assets/img3.png" alt="" />
-            </figure>
-          </div>
-          <!-- card 04  -->
-          <div class="flex flex-col md:flex-row items-center border-2 col-span-12 md:col-span-6 rounded-2xl">
-            <figure class="p-4">
-              <img
-                class="border-2 border-dashed w-full"
-                src="./assets/img4.png"
-                alt=""
-              />
-            </figure>
-            <div class="card-body md:w-2/3">
-              <h2 class="text-2xl font-extrabold">Commercial</h2>
-              <p class="text-base">
-                The barn house captivates with its blend of rustic charm and
-                modern. The barn house captivates with its blend of rustic charm
-                and modern .
-              </p>
-              <div class="space-x-1">
-                <h5 class="inline text-2xl text-black font-bold">
-                  View Details
-                </h5>
-                <i
-                  class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
-                ></i>
+            <!-- card 02  -->
+            <div class="col-span-12 md:col-span-4 p-6 border-2 rounded-2xl">
+              <figure class="border-2 border-dashed">
+                <img class="w-full" src="./assets/img2.png" alt="" />
+              </figure>
+            </div>
+            <!-- card 03  -->
+            <div class="col-span-12 md:col-span-3 p-6 border-2 rounded-2xl">
+              <figure class="border-2 border-dashed">
+                <img class="w-full" src="./assets/img3.png" alt="" />
+              </figure>
+            </div>
+            <!-- card 04  -->
+            <div
+              class="flex flex-col md:flex-row items-center border-2 col-span-12 md:col-span-6 rounded-2xl"
+            >
+              <figure class="p-4">
+                <img
+                  class="border-2 border-dashed w-full"
+                  src="./assets/img4.png"
+                  alt=""
+                />
+              </figure>
+              <div class="card-body md:w-2/3">
+                <h2 class="text-2xl font-extrabold">Commercial</h2>
+                <p class="text-base">
+                  The barn house captivates with its blend of rustic charm and
+                  modern. The barn house captivates with its blend of rustic
+                  charm and modern .
+                </p>
+                <div class="space-x-1">
+                  <h5 class="inline text-2xl text-black font-bold">
+                    View Details
+                  </h5>
+                  <i
+                    class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
+                  ></i>
+                </div>
               </div>
             </div>
+            <!-- card 05  -->
+            <div class="col-span-12 md:col-span-3 p-6 border-2 rounded-2xl">
+              <figure class="border-2 border-dashed">
+                <img class="w-full" src="./assets/img5.png" alt="" />
+              </figure>
+            </div>
           </div>
-          <!-- card 05  -->
-          <div class="col-span-12 md:col-span-3 p-6 border-2 rounded-2xl">
-            <figure class="border-2 border-dashed ">
-              <img class="w-full" src="./assets/img5.png" alt="" />
-            </figure>
-          </div>
-        </div>
           <!-- card 06  -->
-          <div class="col-span-12 md:col-span-3 p-6 border-2 rounded-2xl md:hidden">
-            <figure class="border-2 border-dashed ">
+          <div
+            class="col-span-12 md:col-span-3 p-6 border-2 rounded-2xl md:hidden"
+          >
+            <figure class="border-2 border-dashed">
               <img class="w-full" src="./assets/img3.png" alt="" />
             </figure>
           </div>
@@ -550,7 +663,7 @@
           The barn house captivates with its blend of rustic charm and modern
           sophistication, featuring weathered wood, sleek metal accents.
         </p>
-        
+
         <div class="grid grid-cols-1 md:grid-cols-3 gap-x-6">
           <!-- article 01  -->
           <div class="p-6 bg-base-100 rounded-2xl space-y-4">
