--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
           <p
             class="mx-auto text-bold_opacity_color w-full md:w-3/5 text-center"
           >
-            The barn house captivates with its blend of rustic charm and modern
-            sophistication, featuring weathered wood, sleek metal accents, and
-            large windows that flood the space with natural light.
+            Explore how our barn house designs combine striking aesthetics with
+            functional elegance. Each project is crafted to make a bold
+            statement while offering modern comfort and style.
           </p>
           <button
             class="flex items-center justify-center bg-primary_color bg-opacity-50 px-5 py-4 rounded-[32px] text-base font-bold text-black w-full md:w-1/6"
@@ -219,56 +219,6 @@
     </header>
     <main>
       <!-- About Us  -->
-      <!-- <section class="container mx-auto my-24"> -->
-      <!-- <div class="grid grid-cols-2 grid-rows-2 gap-9"> -->
-      <!-- about us content  -->
-      <!-- <div class="space-y-6 h-full">
-            <div class="bg-white inline px-4 py-3 rounded-3xl space-x-1">
-              <i class="fa-solid fa-arrow-right"></i>
-              <h4 class="inline text-base font-bold">About Us</h4>
-            </div>
-            <h2 class="text-4xl font-bold text-black">
-              We design thoughtful,<br />liveable spaces
-            </h2>
-            <p class="text-base font-medium text-lite_opacity_color">
-              The barn house captivates with its blend of rustic charm and
-              modern sophistication, featuring weathered wood, sleek metal
-              accents.
-            </p>
-            <div class="flex items-center gap-x-6 p-6 bg-white rounded-2xl">
-              <figure>
-                <img class="w-full" src="./assets/commercial.png" alt="" />
-              </figure>
-              <div>
-                <h4 class="text-xl font-extrabold">Commercial</h4>
-                <p class="text-base font-medium text-lite_opacity_color">
-                  The barn house captivates with its blend of rustic charm and
-                  modern.
-                </p>
-              </div>
-            </div>
-            <div class="flex items-center gap-x-6 p-6 bg-white rounded-2xl">
-              <figure>
-                <img src="./assets/residential.png" alt="" />
-              </figure>
-              <div>
-                <h4 class="text-xl font-extrabold">Residential</h4>
-                <p class="text-base font-medium text-lite_opacity_color">
-                  The barn house captivates with its blend of rustic charm and
-                  modern.
-                </p>
-              </div>
-            </div>
-          </div> -->
-      <!-- about us image  -->
-      <!-- <div>
-            <figure class="border-2 border-dashed w-[573px]">
-              <img class="w-full" src="./assets/Rectangle.png" alt="" />
-            </figure>
-          </div> -->
-      <!-- </div> -->
-      <!-- </section> -->
-
       <section class="container mx-auto my-24">
         <figure>
           <img class="hidden md:block" src="./assets/Vector.png" alt="" />
@@ -290,9 +240,10 @@
               <p
                 class="text-base font-medium text-lite_opacity_color text-center md:text-start"
               >
-                The barn house captivates with its blend of rustic charm and
-                modern sophistication, featuring weathered wood, sleek metal
-                accents.
+                We create stylish, functional interiors that enhance your
+                everyday life. Our designs reflect your unique needs, ensuring
+                each space is beautiful and comfortable. Trust us to transform
+                your space into something truly special.
               </p>
               <div class="flex items-center gap-x-6 p-6 bg-white rounded-2xl">
                 <figure>
@@ -301,8 +252,10 @@
                 <div>
                   <h4 class="text-xl font-extrabold">Commercial</h4>
                   <p class="text-base font-medium text-lite_opacity_color">
-                    The barn house captivates with its blend of rustic charm and
-                    modern.
+                    We specialize in designing commercial spaces that boost
+                    productivity and customer experience. Our tailored solutions
+                    align with your brand, creating environments that support
+                    your business goals.
                   </p>
                 </div>
               </div>
@@ -313,8 +266,9 @@
                 <div>
                   <h4 class="text-xl font-extrabold">Residential</h4>
                   <p class="text-base font-medium text-lite_opacity_color">
-                    The barn house captivates with its blend of rustic charm and
-                    modern.
+                    We create personalized residential interiors that blend
+                    comfort and style. Our designs reflect your unique taste,
+                    turning houses into warm, inviting homes.
                   </p>
                 </div>
               </div>
@@ -368,7 +322,7 @@
         </div>
       </section>
       <!-- our Services  -->
-      <section class="container mx-auto space-y-6 my-24">
+      <section id="services" class="container mx-auto space-y-6 my-24">
         <div class="space-y-6">
           <div class="flex justify-center">
             <div class="bg-white inline px-4 py-3 rounded-3xl space-x-1">
@@ -382,8 +336,10 @@
           <p
             class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
           >
-            The barn house captivates with its blend of rustic charm and modern
-            sophistication, featuring weathered wood, sleek metal accents.
+            We offer a range of interior design services, including bespoke
+            residential and commercial designs, space planning, and project
+            management. From concept to completion, we create environments that
+            are both beautiful and functional, tailored to meet your needs.
           </p>
         </div>
         <div class="grid md:grid-cols-3 gap-4">
@@ -488,8 +444,9 @@
         <p
           class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
         >
-          The barn house captivates with its blend of rustic charm and modern
-          sophistication, featuring weathered wood, sleek metal accents.
+          We start with a consultation to understand your vision, create
+          tailored design concepts, manage the implementation, and review the
+          final result to ensure your satisfaction.
         </p>
         <div class="grid grid-cols-1 md:grid-cols-4 gap-6">
           <div class="p-6 bg-[#E7C1D3] rounded-2xl space-y-3">
@@ -535,7 +492,7 @@
         </div>
       </section>
       <!-- Portfolio section start  -->
-      <section class="p-8 bg-white">
+      <section id="portfolio" class="p-8 bg-white">
         <div class="space-y-6 container mx-auto">
           <div class="flex justify-center">
             <div
@@ -553,8 +510,9 @@
           <p
             class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
           >
-            The barn house captivates with its blend of rustic charm and modern
-            sophistication, featuring weathered wood, sleek metal accents.
+            Discover our most recent projects showcasing our innovative designs
+            and diverse styles. Each portfolio piece highlights our commitment
+            to creating beautiful, functional spaces.
           </p>
           <!-- Portfolio layout  -->
           <div class="grid grid-cols-1 md:grid-cols-12 container mx-auto gap-6">
@@ -572,9 +530,10 @@
               <div class="card-body md:w-2/3">
                 <h2 class="text-2xl font-extrabold">Commercial</h2>
                 <p class="text-base">
-                  The barn house captivates with its blend of rustic charm and
-                  modern. The barn house captivates with its blend of rustic
-                  charm and modern .
+                  Explore our latest commercial projects, featuring dynamic and
+                  functional designs that enhance business environments. Each
+                  project demonstrates our expertise in creating impactful
+                  spaces that align with your brand and operational needs.
                 </p>
                 <div class="space-x-1">
                   <h5 class="inline text-2xl text-black font-bold">
@@ -610,11 +569,12 @@
                 />
               </figure>
               <div class="card-body md:w-2/3">
-                <h2 class="text-2xl font-extrabold">Commercial</h2>
+                <h2 class="text-2xl font-extrabold">Residential</h2>
                 <p class="text-base">
-                  The barn house captivates with its blend of rustic charm and
-                  modern. The barn house captivates with its blend of rustic
-                  charm and modern .
+                  Browse our recent residential projects, showcasing our ability
+                  to create personalized, inviting homes. Each design reflects
+                  our commitment to blending style and comfort to suit your
+                  unique lifestyle.
                 </p>
                 <div class="space-x-1">
                   <h5 class="inline text-2xl text-black font-bold">
@@ -645,7 +605,7 @@
       </section>
       <!-- Portfolio section end  -->
       <!-- article start  -->
-      <section class="container mx-auto my-24 space-y-6">
+      <section id="blogs" class="container mx-auto my-24 space-y-6">
         <div class="flex justify-center">
           <div
             class="bg-primary_color bg-opacity-50 inline px-4 py-3 rounded-3xl space-x-1"
@@ -660,8 +620,9 @@
         <p
           class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
         >
-          The barn house captivates with its blend of rustic charm and modern
-          sophistication, featuring weathered wood, sleek metal accents.
+          Stay updated with our latest insights, design tips, and industry news.
+          Explore articles that offer inspiration and keep you informed about
+          trends and developments in the world of interior design.
         </p>
 
         <div class="grid grid-cols-1 md:grid-cols-3 gap-x-6">
@@ -682,11 +643,11 @@
             </div>
             <div class="space-y-2">
               <h2 class="text-xl md:text-2xl font-extrabold">
-                How to choose the furniture right of your home.
+                Maximizing Space: Furniture Solutions for Small Rooms.
               </h2>
               <p class="text-base">
-                The barn house captivates with its blend of rustic charm and
-                modern.
+                Discover creative furniture solutions designed to make the most
+                of small spaces. Learn...
               </p>
               <div class="space-x-1">
                 <h5 class="inline text-2xl text-black font-bold">Read More</h5>
@@ -713,11 +674,11 @@
             </div>
             <div class="space-y-2">
               <h2 class="text-xl md:text-2xl font-extrabold">
-                How to choose the furniture right of your home.
+                Trends in Home Décor: What’s In and What’s Out This Year.
               </h2>
               <p class="text-base">
-                The barn house captivates with its blend of rustic charm and
-                modern.
+                Stay ahead of the curve with a guide to the latest home décor
+                trends. Explore what’s...
               </p>
               <div class="space-x-1">
                 <h5 class="inline text-2xl text-black font-bold">Read More</h5>
@@ -744,11 +705,11 @@
             </div>
             <div class="space-y-2">
               <h2 class="text-xl md:text-2xl font-extrabold">
-                How to choose the furniture right of your home.
+                Creating Harmony: How to Coordinate Furniture and Color Schemes.
               </h2>
               <p class="text-base">
-                The barn house captivates with its blend of rustic charm and
-                modern.
+                Achieve a cohesive look in your home by learning how to match
+                furniture with color...
               </p>
               <div class="space-x-1">
                 <h5 class="inline text-2xl text-black font-bold">Read More</h5>
@@ -762,7 +723,10 @@
       </section>
       <!-- article end  -->
       <!-- contact form start  -->
-      <section class="bg-[url('./assets/bg.jpg')] bg-no-repeat bg-cover py-24">
+      <section
+        id="contact_us"
+        class="bg-[url('./assets/bg.jpg')] bg-no-repeat bg-cover py-24"
+      >
         <div class="container mx-auto space-y-6">
           <div class="flex justify-center">
             <div
@@ -778,8 +742,8 @@
           <p
             class="text-base font-medium text-lite_opacity_color text-center md:w-3/6 mx-auto"
           >
-            The barn house captivates with its blend of rustic charm and modern
-            sophistication, featuring weathered wood, sleek metal accents.
+            Ready to start your next design project? Share your vision with us,
+            and let’s collaborate to turn your ideas into reality.
           </p>
         </div>
         <!-- input form  -->
@@ -807,7 +771,7 @@
           <!-- Phone -->
           <div class="col-span-1 md:col-span-2">
             <input
-              type="text"
+              type="number"
               id="phone"
               class="input w-full rounded-3xl"
               placeholder="Phone Number*"
@@ -874,29 +838,27 @@
         </h3>
       </div>
       <p class="text-base text-lite_opacity_color font-bold">
-        The barn house captivates with its blend of rustic charm and modern
-        sophistication, featuring weathered wood, sleek metal accents.
+        Get in touch to start your next design adventure. We’re excited to bring
+        your ideas to life.
       </p>
       <nav>
         <div class="grid grid-flow-col gap-4">
           <div class="navbar-center hidden lg:flex">
             <ul class="menu menu-horizontal px-1 space-x-9">
-              <li
-                class="text-base cursor-pointer text-bold_opacity_color font-bold"
-              >
-                Home
+              <li class="text-base cursor-pointer text-bold_opacity_color">
+                <a href="#">Home</a>
               </li>
               <li class="text-base cursor-pointer text-bold_opacity_color">
-                Services
+                <a href="#services">Services</a>
               </li>
               <li class="text-base cursor-pointer text-bold_opacity_color">
-                Portfolio
+                <a href="#portfolio">Portfolio</a>
               </li>
               <li class="text-base cursor-pointer text-bold_opacity_color">
-                Blogs
+                <a href="#blogs">Blogs</a>
               </li>
               <li class="text-base cursor-pointer text-bold_opacity_color">
-                Contact Us
+                <a href="#contact_us">Contact Us</a>
               </li>
             </ul>
           </div>
