--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <body class="bg-gray-50 font-manrope">
     <header class="container mx-auto">
       <!-- navigation bar start  -->
-      <nav class="hidden">
+      <nav class="">
         <div class="navbar flex">
           <div class="w-full md:navbar-start">
             <div class="dropdown">
@@ -131,35 +131,26 @@
               </li>
             </ul>
           </div>
-          <div class="navbar-end space-x-4">
-            <i
-              class="bg-white text-2xl text-bold_opacity_color rounded-full border-slate-200 border p-2 fa-solid fa-magnifying-glass"
-            ></i>
-            <i
-              class="bg-white text-2xl text-bold_opacity_color rounded-full border-slate-200 border p-2 fa-solid fa-cart-shopping"
-            ></i>
 
-            <div
-              class="bg-primary_color flex items-center space-x-2 px-5 py-3 rounded-[32px] cursor-pointer"
-            >
-              <a class="text-black text-lg font-extrabold">Book Consult</a>
-              <div class="p-2 bg-black rounded-full">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="size-6 text-white"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
-                  />
-                </svg>
+          <div class="navbar-end hidden md:block">
+            <!-- <div class="md:block"> -->
+            <div class="flex items-center space-x-4 justify-end">
+              <i
+                class="fa-solid fa-magnifying-glass p-2 border-2 rounded-full bg-white"
+              ></i>
+              <i
+                class="fa-solid fa-cart-shopping p-2 border-2 rounded-full bg-white"
+              ></i>
+              <div
+                class="flex items-center space-x-2 px-5 py-4 bg-primary_color text-lg font-extrabold rounded-3xl cursor-pointer"
+              >
+                <p><a href="#">Book Consult</a></p>
+                <i
+                  class="fa-solid fa-arrow-right text-white p-2 bg-black rounded-full -rotate-45"
+                ></i>
               </div>
             </div>
+            <!-- </div> -->
           </div>
         </div>
       </nav>
