modify btn font size

--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                   spaces that align with your brand and operational needs.
                 </p>
                 <div class="space-x-1">
-                  <h5 class="inline text-2xl text-black font-bold">
+                  <h5 class="inline text-base text-black font-bold">
                     View Details
                   </h5>
                   <i
@@ -556,7 +556,7 @@
                   unique lifestyle.
                 </p>
                 <div class="space-x-1">
-                  <h5 class="inline text-2xl text-black font-bold">
+                  <h5 class="inline text-base text-black font-bold">
                     View Details
                   </h5>
                   <i
@@ -629,7 +629,7 @@
                 of small spaces. Learn...
               </p>
               <div class="space-x-1">
-                <h5 class="inline text-2xl text-black font-bold">Read More</h5>
+                <h5 class="inline text-base text-black font-bold">Read More</h5>
                 <i
                   class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
                 ></i>
@@ -660,7 +660,7 @@
                 trends. Explore what’s...
               </p>
               <div class="space-x-1">
-                <h5 class="inline text-2xl text-black font-bold">Read More</h5>
+                <h5 class="inline text-base text-black font-bold">Read More</h5>
                 <i
                   class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
                 ></i>
@@ -691,7 +691,7 @@
                 furniture with color...
               </p>
               <div class="space-x-1">
-                <h5 class="inline text-2xl text-black font-bold">Read More</h5>
+                <h5 class="inline text-base text-black font-bold">Read More</h5>
                 <i
                   class="fa-solid fa-arrow-right p-2 bg-primary_color rounded-full -rotate-45"
                 ></i>
