resolve view details and book consult btn width problem

--- a/index.html
+++ b/index.html
@@ -133,21 +133,34 @@
           </div>
 
           <div class="navbar-end hidden md:block">
-            <div class="flex items-center space-x-4 justify-end">
+            <div class="flex items-center space-x-2 justify-end">
               <i
                 class="fa-solid fa-magnifying-glass p-2 border-2 rounded-full bg-white"
               ></i>
               <i
                 class="fa-solid fa-cart-shopping p-2 border-2 rounded-full bg-white"
               ></i>
-              <div
-                class="flex items-center space-x-2 px-5 py-4 bg-primary_color text-lg font-extrabold rounded-3xl cursor-pointer"
+              <button
+                class="btn flex items-center justify-center bg-primary_color hover:bg-primary_color hover:bg-opacity-50 rounded-[32px] text-base font-bold text-black border-0"
               >
-                <p><a href="#">Book Consult</a></p>
-                <i
-                  class="fa-solid fa-arrow-right text-white p-2 bg-black rounded-full -rotate-45"
-                ></i>
-              </div>
+                Book Consult
+                <span
+                  ><svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="1.5"
+                    stroke="currentColor"
+                    class="text-white rounded-full bg-black p-2 size-8"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+                    />
+                  </svg>
+                </span>
+              </button>
             </div>
           </div>
         </div>
@@ -172,7 +185,7 @@
             statement while offering modern comfort and style.
           </p>
           <button
-            class="flex items-center justify-center bg-primary_color bg-opacity-50 px-5 py-4 rounded-[32px] text-base font-bold text-black w-full md:w-1/6"
+            class="btn flex items-center justify-center bg-primary_color hover:bg-primary_color bg-opacity-50 hover:bg-opacity-60 rounded-[32px] text-base font-bold text-black w-full md:w-auto"
           >
             View Details
             <span
@@ -778,7 +791,7 @@
           <!-- Submit Button -->
           <div class="col-span-1 md:col-span-4">
             <button
-              class="btn bg-primary_color w-full rounded-3xl text-xl font-extrabold"
+              class="btn bg-primary_color hover:bg-primary_color hover:bg-opacity-80 w-full rounded-3xl text-xl font-extrabold"
             >
               Send Mail
               <span
@@ -846,18 +859,19 @@
           </div>
         </div>
       </nav>
-      <div
-        class="bg-primary_color flex items-center space-x-2 px-5 py-3 rounded-[32px] cursor-pointer"
+
+      <button
+        class="btn flex items-center justify-center bg-primary_color hover:bg-primary_color hover:bg-opacity-50 rounded-[32px] text-base font-bold text-black border-0"
       >
-        <a class="text-black text-lg font-extrabold">Book Consult</a>
-        <div class="p-2 bg-black rounded-full">
-          <svg
+        Book Consult
+        <span
+          ><svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
-            class="size-6 text-white"
+            class="text-white rounded-full bg-black p-2 size-8"
           >
             <path
               stroke-linecap="round"
@@ -865,8 +879,8 @@
               d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
             />
           </svg>
-        </div>
-      </div>
+        </span>
+      </button>
     </footer>
     <!-- footer end  -->
   </body>
