solved site title width issue

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <!-- navigation bar start  -->
       <nav class="">
         <div class="navbar flex">
-          <div class="w-full md:navbar-start">
+          <div class="w-full md:w-1/2 md:navbar-start">
             <div class="dropdown">
               <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
                 <svg
