about card image correction

--- a/index.html
+++ b/index.html
@@ -237,30 +237,29 @@
                 each space is beautiful and comfortable. Trust us to transform
                 your space into something truly special.
               </p>
-              <div class="flex items-center gap-x-6 p-6 bg-white rounded-2xl">
-                <figure>
-                  <img src="./assets/commercial.png" alt="" />
+              <!-- about card 01 -->
+              <div class="p-6 flex gap-x-6 bg-white rounded-2xl">
+                <figure class="w-4/12 md:w-3/12">
+                  <img class="w-full" src="./assets/commercial.png" alt="" />
                 </figure>
-                <div>
-                  <h4 class="text-xl font-extrabold">Commercial</h4>
+                <div class="space-y-3">
+                  <h4 class="text-lg font-extrabold">Commercial</h4>
                   <p class="text-base font-medium text-lite_opacity_color">
                     We specialize in designing commercial spaces that boost
-                    productivity and customer experience. Our tailored solutions
-                    align with your brand, creating environments that support
-                    your business goals.
+                    productivity and customer experience.
                   </p>
                 </div>
               </div>
-              <div class="flex items-center gap-x-6 p-6 bg-white rounded-2xl">
-                <figure>
+              <!-- about card 02  -->
+              <div class="p-6 flex gap-x-6 bg-white rounded-2xl">
+                <figure class="w-4/12 md:w-3/12">
                   <img src="./assets/residential.png" alt="" />
                 </figure>
-                <div>
-                  <h4 class="text-xl font-extrabold">Residential</h4>
+                <div class="space-y-3">
+                  <h4 class="text-lg font-extrabold">Residential</h4>
                   <p class="text-base font-medium text-lite_opacity_color">
-                    We create personalized residential interiors that blend
-                    comfort and style. Our designs reflect your unique taste,
-                    turning houses into warm, inviting homes.
+                    We specialize in designing commercial spaces that boost
+                    productivity and customer experience.
                   </p>
                 </div>
               </div>
