hamburger menu modified

--- a/index.html
+++ b/index.html
@@ -48,45 +48,6 @@
       <nav class="">
         <div class="navbar flex">
           <div class="w-full md:w-1/2 md:navbar-start">
-            <div class="dropdown">
-              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="h-5 w-5"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M4 6h16M4 12h8m-8 6h16"
-                  />
-                </svg>
-              </div>
-              <ul
-                tabindex="0"
-                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
-              >
-                <li class="text-base cursor-pointer text-bold_opacity_color">
-                  Home
-                </li>
-                <li class="text-base cursor-pointer text-bold_opacity_color">
-                  Services
-                </li>
-                <li class="text-base cursor-pointer text-bold_opacity_color">
-                  Portfolio
-                </li>
-                <li class="text-base cursor-pointer text-bold_opacity_color">
-                  Blogs
-                </li>
-                <li class="text-base cursor-pointer text-bold_opacity_color">
-                  Contact Us
-                </li>
-              </ul>
-            </div>
-            <!-- logo arrow svg -->
             <div class="cursor-pointer flex items-center">
               <div class="rounded-full bg-primary_color p-2">
                 <svg
@@ -163,6 +124,9 @@
               </button>
             </div>
           </div>
+          <div class="md:hidden p-2 bg-white rounded-full">
+              <i class="fa-solid fa-bars"></i>
+            </div>
         </div>
       </nav>
       <!-- navigation bar end  -->
